-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.2, 5.7.0, 5.7.1
-
MSVC 2015
Qt 5.7.0, Qt 5.7.1
-
2837f1c868b92e7cc8293064ff7ec3f76cdf6c7b
- Open project qtdeclarative\examples\quick\demos\samegame\samegame.pro from Qt's repository.
- Configure it to use Qt 5.7.1.
- Open Creator's QML Profiler.
- Disable profiling.
- Click the QML Profiler's little "Play" button.
- In the Samegame application, click "1 Player".
- Enable profiling.
Samegame crashes:1 QQuickProfiler::recordSceneGraphTimestamp<6> qquickprofiler_p.h 257 0x5d0b8ed7 2 QSGThreadedRenderLoop::polishAndSync qsgthreadedrenderloop.cpp 1192 0x5d0b45d7 3 QSGThreadedRenderLoop::handleUpdateRequest qsgthreadedrenderloop.cpp 1011 0x5d0b36db 4 QQuickWindow::event qquickwindow.cpp 1528 0x5d0f45da 5 QCoreApplicationPrivate::notify_helper qcoreapplication.cpp 1123 0x5c1fcc9c 6 doNotify qcoreapplication.cpp 1063 0x5c1fe213 7 QCoreApplication::notify qcoreapplication.cpp 1049 0x5c1fad03 8 QGuiApplication::notify qguiapplication.cpp 1643 0x5d7aad18 9 QCoreApplication::notifyInternal2 qcoreapplication.cpp 988 0x5c1fc17c 10 QCoreApplication::sendEvent qcoreapplication.h 231 0x5c204f29 11 QWindowPrivate::deliverUpdateRequest qwindow.cpp 2171 0x5d7c3667 12 QWindow::event qwindow.cpp 2143 0x5d7c2b4c 13 QQuickWindow::event qquickwindow.cpp 1547 0x5d0f463f 14 QCoreApplicationPrivate::notify_helper qcoreapplication.cpp 1123 0x5c1fcc9c 15 doNotify qcoreapplication.cpp 1063 0x5c1fe213 16 QCoreApplication::notify qcoreapplication.cpp 1049 0x5c1fad03 17 QGuiApplication::notify qguiapplication.cpp 1643 0x5d7aad18 18 QCoreApplication::notifyInternal2 qcoreapplication.cpp 988 0x5c1fc17c 19 QCoreApplication::sendEvent qcoreapplication.h 231 0x5c204f29 20 QEventDispatcherWin32Private::sendTimerEvent qeventdispatcher_win.cpp 657 0x5c2959bb ... <Mehr>
Enabling profiling should not crash the application being profiled.