src/quick/scenegraph/util/qsgtexture.cpp
@@ -646,7 +646,8 @@ void QSGPlainTexture::bind()
                     (int) qsg_renderer_timer.elapsed(),
                     m_texture_size.width(),
                     m_texture_size.height());
-            Q_QUICK_SG_PROFILE_END(QQuickProfiler::SceneGraphTextureDeletion);
+            Q_QUICK_SG_PROFILE_END(QQuickProfiler::SceneGraphTextureDeletion,
+                                   QQuickProfiler::SceneGraphTextureDeletionDelete);
         }
         m_texture_id = 0;
         m_texture_size = QSize();
@@ -662,7 +663,8 @@ void QSGPlainTexture::bind()
     qint64 bindTime = 0;
     if (profileFrames)
         bindTime = qsg_renderer_timer.nsecsElapsed();
-    Q_QUICK_SG_PROFILE_RECORD(QQuickProfiler::SceneGraphTexturePrepare);
+    Q_QUICK_SG_PROFILE_RECORD(QQuickProfiler::SceneGraphTexturePrepare,
+                              QQuickProfiler::SceneGraphTexturePrepareBind);
 
     // ### TODO: check for out-of-memory situations...
 
@@ -703,7 +705,8 @@ void QSGPlainTexture::bind()
     qint64 convertTime = 0;
     if (profileFrames)
         convertTime = qsg_renderer_timer.nsecsElapsed();
-    Q_QUICK_SG_PROFILE_RECORD(QQuickProfiler::SceneGraphTexturePrepare);
+    Q_QUICK_SG_PROFILE_RECORD(QQuickProfiler::SceneGraphTexturePrepare,
+                              QQuickProfiler::SceneGraphTexturePrepareConvert);
 
     updateBindOptions(m_dirty_bind_options);
 
@@ -746,14 +749,16 @@ void QSGPlainTexture::bind()
     qint64 swizzleTime = 0;
     if (profileFrames)
         swizzleTime = qsg_renderer_timer.nsecsElapsed();
-    Q_QUICK_SG_PROFILE_RECORD(QQuickProfiler::SceneGraphTexturePrepare);
+    Q_QUICK_SG_PROFILE_RECORD(QQuickProfiler::SceneGraphTexturePrepare,
+                              QQuickProfiler::SceneGraphTexturePrepareSwizzle);
 
     funcs->glTexImage2D(GL_TEXTURE_2D, 0, internalFormat, m_texture_size.width(), m_texture_size.height(), 0, externalFormat, GL_UNSIGNED_BYTE, tmp.constBits());
 
     qint64 uploadTime = 0;
     if (profileFrames)
         uploadTime = qsg_renderer_timer.nsecsElapsed();
-    Q_QUICK_SG_PROFILE_RECORD(QQuickProfiler::SceneGraphTexturePrepare);
+    Q_QUICK_SG_PROFILE_RECORD(QQuickProfiler::SceneGraphTexturePrepare,
+                              QQuickProfiler::SceneGraphTexturePrepareUpload);
 
     if (mipmapFiltering() != QSGTexture::None) {
         funcs->glGenerateMipmap(GL_TEXTURE_2D);
@@ -776,7 +781,8 @@ void QSGPlainTexture::bind()
                 int((mipmapTime - uploadTime)/1000000),
                 m_texture_size != m_image.size() ? " (scaled to GL_MAX_TEXTURE_SIZE)" : "");
     }
-    Q_QUICK_SG_PROFILE_END(QQuickProfiler::SceneGraphTexturePrepare);
+    Q_QUICK_SG_PROFILE_END(QQuickProfiler::SceneGraphTexturePrepare,
+                           QQuickProfiler::SceneGraphTexturePrepareMipmap);
 
     m_texture_rect = QRectF(0, 0, 1, 1);
 
